fix(navigation): adjust spacing menu content

--- a/packages/components/src/components/bal-navigation/bal-navigation.sass
+++ b/packages/components/src/components/bal-navigation/bal-navigation.sass
@@ -128,7 +128,6 @@
     .bal-nav__menu__wrapper.columns
       margin-bottom: 0
       margin-top: 0
-      margin-right: 0
       .column
         padding-top: 0
         padding-bottom: 0
